--- a/PLASTIC/index.html
+++ b/PLASTIC/index.html
@@ -1,62 +1,93 @@
-<div>Teachable Machine Image Model</div>
-<button type="button" onclick="init()">Abrir Cámara</button>
-<button type="button" onclick="switchCamera()">Cambiar Cámara</button>
-<video id="webcam" autoplay playsinline width="300" height="300"></video>
-<div id="label-container"></div>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Detector de Plástico</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      background: #f0f4f8;
+      margin: 0;
+      padding: 20px;
+    }
+    h1 {
+      color: #0070f3;
+    }
+    #webcam-container {
+      margin: 20px auto;
+    }
+    #label-container div {
+      margin: 5px;
+      padding: 8px;
+      background: #fff;
+      border-radius: 6px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    button {
+      background: #0070f3;
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      font-size: 16px;
+      cursor: pointer;
+      margin-top: 10px;
+    }
+    button:hover {
+      background: #005bb5;
+    }
+  </style>
+</head>
+<body>
+  <h1>Detector de Plástico</h1>
+  <button type="button" onclick="init()">Iniciar Cámara</button>
+  <div id="webcam-container"></div>
+  <div id="label-container"></div>
 
-<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"></script>
-<script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest"></script>
-<script>
-    const URL = "./my_model/";
-    let model, labelContainer, maxPredictions;
-    let currentStream = null;
-    let currentFacingMode = "environment"; // inicia con la trasera
-    const video = document.getElementById("webcam");
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
+  <script>
+    const URL = "./plastic/";
+
+    let model, webcam, labelContainer, maxPredictions;
 
     async function init() {
-        const modelURL = URL + "model.json";
-        const metadataURL = URL + "metadata.json";
-        model = await tmImage.load(modelURL, metadataURL);
-        maxPredictions = model.getTotalClasses();
+      const modelURL = URL + "model.json";
+      const metadataURL = URL + "metadata.json";
 
-        labelContainer = document.getElementById("label-container");
-        for (let i = 0; i < maxPredictions; i++) {
-            labelContainer.appendChild(document.createElement("div"));
-        }
+      model = await tmImage.load(modelURL, metadataURL);
+      maxPredictions = model.getTotalClasses();
 
-        startCamera();
+      const flip = true;
+      webcam = new tmImage.Webcam(250, 250, flip);
+      await webcam.setup();
+      await webcam.play();
+      window.requestAnimationFrame(loop);
+
+      document.getElementById("webcam-container").appendChild(webcam.canvas);
+      labelContainer = document.getElementById("label-container");
+      for (let i = 0; i < maxPredictions; i++) {
+        labelContainer.appendChild(document.createElement("div"));
+      }
     }
 
-    async function startCamera() {
-        if (currentStream) {
-            currentStream.getTracks().forEach(track => track.stop());
-        }
-        const constraints = {
-            audio: false,
-            video: {
-                facingMode: currentFacingMode
-            }
-        };
-        currentStream = await navigator.mediaDevices.getUserMedia(constraints);
-        video.srcObject = currentStream;
-        predictLoop();
+    async function loop() {
+      webcam.update();
+      await predict();
+      window.requestAnimationFrame(loop);
     }
 
-    async function switchCamera() {
-        currentFacingMode = currentFacingMode === "user" ? "environment" : "user";
-        await startCamera();
+    async function predict() {
+      const prediction = await model.predict(webcam.canvas);
+      for (let i = 0; i < maxPredictions; i++) {
+        const classPrediction =
+          prediction[i].className + ": " + (prediction[i].probability * 100).toFixed(1) + "%";
+        labelContainer.childNodes[i].innerHTML = classPrediction;
+      }
     }
+  </script>
+</body>
+</html>
 
-    async function predictLoop() {
-        if (!model) return;
-        setInterval(async () => {
-            const prediction = await model.predict(video);
-            for (let i = 0; i < maxPredictions; i++) {
-                const classPrediction =
-                    prediction[i].className + ": " +
-                    prediction[i].probability.toFixed(2);
-                labelContainer.childNodes[i].innerHTML = classPrediction;
-            }
-        }, 500);
-    }
-</script>
