--- a/PLASTIC/index.html
+++ b/PLASTIC/index.html
@@ -3,55 +3,71 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Detector de Plástico</title>
+  <title>Detector 4D - Teachable Machine</title>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.20.0"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8"></script>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      background: #f0f4f8;
       margin: 0;
-      padding: 20px;
+      font-family: Arial, sans-serif;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+      height: 100vh;
     }
-    h1 {
-      color: #0070f3;
+    .panel {
+      border: 2px solid #333;
+      padding: 10px;
+      box-sizing: border-box;
+      overflow: auto;
     }
     #webcam-container {
-      margin: 20px auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: #000;
+    }
+    video {
+      width: 100%;
+      max-height: 100%;
+      object-fit: cover;
     }
     #label-container div {
-      margin: 5px;
-      padding: 8px;
-      background: #fff;
-      border-radius: 6px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      font-size: 18px;
+      margin: 5px 0;
     }
-    button {
-      background: #0070f3;
-      color: white;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 5px;
-      font-size: 16px;
-      cursor: pointer;
-      margin-top: 10px;
-    }
-    button:hover {
-      background: #005bb5;
+    #logs {
+      font-size: 14px;
+      color: #444;
     }
   </style>
 </head>
 <body>
-  <h1>Detector de Plástico</h1>
-  <button type="button" onclick="init()">Iniciar Cámara</button>
-  <div id="webcam-container"></div>
-  <div id="label-container"></div>
+  <!-- Panel 1: Cámara -->
+  <div class="panel" id="webcam-container"></div>
 
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
+  <!-- Panel 2: Predicciones -->
+  <div class="panel">
+    <h2>📊 Predicciones</h2>
+    <div id="label-container"></div>
+  </div>
+
+  <!-- Panel 3: Info del modelo -->
+  <div class="panel">
+    <h2>📁 Clases</h2>
+    <ul id="class-list"></ul>
+  </div>
+
+  <!-- Panel 4: Logs -->
+  <div class="panel">
+    <h2>📝 Logs en vivo</h2>
+    <div id="logs"></div>
+  </div>
+
   <script>
-    const URL = "./plastic/";
-
+    const URL = "./my_model/";
     let model, webcam, labelContainer, maxPredictions;
+    let logs = document.getElementById("logs");
 
     async function init() {
       const modelURL = URL + "model.json";
@@ -61,16 +77,25 @@
       maxPredictions = model.getTotalClasses();
 
       const flip = true;
-      webcam = new tmImage.Webcam(250, 250, flip);
+      webcam = new tmImage.Webcam(300, 300, flip);
       await webcam.setup();
       await webcam.play();
       window.requestAnimationFrame(loop);
 
       document.getElementById("webcam-container").appendChild(webcam.canvas);
+
       labelContainer = document.getElementById("label-container");
       for (let i = 0; i < maxPredictions; i++) {
         labelContainer.appendChild(document.createElement("div"));
       }
+
+      // Mostrar lista de clases
+      const classList = document.getElementById("class-list");
+      model.metadata.labels.forEach(label => {
+        let li = document.createElement("li");
+        li.textContent = label;
+        classList.appendChild(li);
+      });
     }
 
     async function loop() {
@@ -81,13 +106,31 @@
 
     async function predict() {
       const prediction = await model.predict(webcam.canvas);
+      let topClass = "";
+      let topProb = 0;
+
       for (let i = 0; i < maxPredictions; i++) {
-        const classPrediction =
-          prediction[i].className + ": " + (prediction[i].probability * 100).toFixed(1) + "%";
-        labelContainer.childNodes[i].innerHTML = classPrediction;
+        const prob = prediction[i].probability.toFixed(2);
+        const label = prediction[i].className;
+        labelContainer.childNodes[i].innerHTML = `${label}: ${prob}`;
+        
+        if (prediction[i].probability > topProb) {
+          topProb = prediction[i].probability;
+          topClass = prediction[i].className;
+        }
+      }
+
+      if (topClass) {
+        let entry = document.createElement("div");
+        entry.textContent = `Detectado: ${topClass} (${(topProb*100).toFixed(1)}%)`;
+        logs.prepend(entry);
+        if (logs.childNodes.length > 20) {
+          logs.removeChild(logs.lastChild);
+        }
       }
     }
+
+    init();
   </script>
 </body>
 </html>
-
