--- a/PLASTIC/index.html
+++ b/PLASTIC/index.html
@@ -62,7 +62,7 @@
 </head>
 <body>
   <h1>Plastic Scanner Pro</h1>
-  <p>Captura una foto para identificar el tipo de plástico</p>
+  <p>Selecciona o toma una foto para identificar el tipo de plástico</p>
 
   <div id="preview">
     <div class="scan-line" id="scanLine"></div>
@@ -70,7 +70,7 @@
   </div>
 
   <input type="file" accept="image/*" capture="environment" id="cameraInput" style="display:none">
-  <button onclick="document.getElementById('cameraInput').click()">📷 Tomar Foto</button>
+  <button onclick="document.getElementById('cameraInput').click()">📷 Seleccionar Foto</button>
   <button onclick="shareResult()">📤 Compartir</button>
 
   <div id="result">Esperando foto...</div>
@@ -84,7 +84,7 @@
   <canvas id="hiddenCanvas" style="display:none;"></canvas>
 
   <script>
-    const URL = "./my_model/"; // ruta correcta para Vercel
+    const URL = "https://plasticc.vercel.app/my_model/"; 
     let model, maxPredictions, lastResult="";
 
     const cameraInput = document.getElementById("cameraInput");
@@ -121,7 +121,7 @@
         if (!model) { alert("Modelo aún no cargado."); return; }
 
         scanLine.style.display = "block";
-        result.innerText = "Escaneando...";
+        result.innerText = "Analizando...";
 
         const MODEL_SIZE = model.getInputShape()[1];
         hiddenCanvas.width = MODEL_SIZE;
