--- a/index.html
+++ b/index.html
@@ -1,68 +1,166 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AI Vision - Teachable Machine</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Plastic Scanner Pro</title>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest"></script>
+  <style>
+    body {
+      font-family: "Segoe UI", Tahoma, sans-serif;
+      background: linear-gradient(135deg,#0f2027,#203a43,#2c5364);
+      color:#fff;
+      text-align:center;
+      margin:0;
+      padding:20px;
+    }
+    h1 { font-size:2rem; margin-bottom:10px; }
+    #preview {
+      width:260px; height:260px;
+      border:3px solid #0ff;
+      border-radius:12px;
+      margin:20px auto;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      background: rgba(0,255,255,0.05);
+      box-shadow:0 0 25px rgba(0,255,255,0.3);
+      position:relative;
+      overflow:hidden;
+    }
+    #preview img { width:100%; height:100%; object-fit:cover; border-radius:12px; }
+    .scan-line {
+      position:absolute;
+      width:100%; height:4px;
+      background: rgba(0,255,255,0.8);
+      animation:scan 2s linear infinite;
+      display:none;
+    }
+    @keyframes scan {0%{top:0;}100%{top:100%;}}
+    #result { margin-top:20px; font-size:1.4rem; font-weight:bold; color:#0ff; }
+    #confidenceBar { width:80%; height:20px; margin:10px auto; background: rgba(255,255,255,0.2); border-radius:10px; overflow:hidden; box-shadow:0 0 10px rgba(0,255,255,0.4); }
+    #confidenceFill { height:100%; width:0%; background: linear-gradient(90deg,#0ff,#00c3ff); transition: width 0.5s ease; }
+    button {
+      background:#0ff; border:none; color:#000;
+      font-size:1rem; padding:10px 18px; margin:10px 5px;
+      border-radius:8px; cursor:pointer; transition:0.3s;
+    }
+    button:hover { background:#06c4c4; }
+    #history { margin-top:30px; text-align:left; max-width:400px; margin-left:auto; margin-right:auto; }
+    .history-item {
+      background: rgba(255,255,255,0.1);
+      border-radius:8px;
+      padding:8px;
+      margin-bottom:8px;
+      display:flex;
+      align-items:center;
+      gap:10px;
+    }
+    .history-item img { width:50px; height:50px; object-fit:cover; border-radius:6px; }
+  </style>
 </head>
-<body class="bg-gradient-to-r from-indigo-600 via-purple-600 to-pink-600 min-h-screen flex flex-col items-center justify-center text-white">
-  
-  <h1 class="text-4xl font-bold mb-6">🤖 AI Vision</h1>
-  <p class="mb-6 text-lg opacity-90">Clasificación en vivo con <b>Teachable Machine</b></p>
+<body>
+  <h1>Plastic Scanner Pro</h1>
+  <p>Captura una foto para identificar el tipo de plástico</p>
 
-  <button onclick="init()" class="px-6 py-3 bg-white text-indigo-700 font-semibold rounded-lg shadow-lg hover:bg-gray-200 transition">
-    Iniciar Cámara
-  </button>
+  <div id="preview">
+    <div class="scan-line" id="scanLine"></div>
+    <img id="photo" src="" alt="Preview" />
+  </div>
 
-  <div id="webcam-container" class="mt-6"></div>
-  <div id="label-container" class="mt-4 space-y-2 text-lg"></div>
+  <input type="file" accept="image/*" capture="environment" id="cameraInput" style="display:none">
+  <button onclick="document.getElementById('cameraInput').click()">📷 Tomar Foto</button>
+  <button onclick="shareResult()">📤 Compartir</button>
 
-  <footer class="mt-12 text-sm opacity-75">
-    🚀 Desplegado en <b>Vercel</b> | Hecho con TensorFlow.js
-  </footer>
+  <div id="result">Esperando foto...</div>
+  <div id="confidenceBar"><div id="confidenceFill"></div></div>
 
-<script>
-  const URL = "./my_model/";
-  let model, webcam, labelContainer, maxPredictions;
+  <div id="history">
+    <h3>📑 Historial</h3>
+    <div id="historyList"></div>
+  </div>
 
-  async function init() {
-    const modelURL = URL + "model.json";
-    const metadataURL = URL + "metadata.json";
+  <canvas id="hiddenCanvas" style="display:none;"></canvas>
 
-    model = await tmImage.load(modelURL, metadataURL);
-    maxPredictions = model.getTotalClasses();
+  <script>
+    const URL = "./my_model/"; // modelo en la raíz
+    let model, maxPredictions, lastResult="";
 
-    const flip = true;
-    webcam = new tmImage.Webcam(300, 300, flip);
-    await webcam.setup();
-    await webcam.play();
-    window.requestAnimationFrame(loop);
+    const cameraInput = document.getElementById("cameraInput");
+    const photo = document.getElementById("photo");
+    const result = document.getElementById("result");
+    const confidenceFill = document.getElementById("confidenceFill");
+    const historyList = document.getElementById("historyList");
+    const scanLine = document.getElementById("scanLine");
+    const hiddenCanvas = document.getElementById("hiddenCanvas");
+    const ctx = hiddenCanvas.getContext("2d");
 
-    document.getElementById("webcam-container").appendChild(webcam.canvas);
-    labelContainer = document.getElementById("label-container");
-    for (let i = 0; i < maxPredictions; i++) {
-      const label = document.createElement("div");
-      label.classList.add("bg-white", "text-indigo-700", "px-4", "py-2", "rounded-lg", "shadow-md");
-      labelContainer.appendChild(label);
+    async function loadModel() {
+      try {
+        result.innerText = "Cargando modelo...";
+        model = await tmImage.load(URL + "model.json", URL + "metadata.json");
+        maxPredictions = model.getTotalClasses();
+        result.innerText = "Modelo cargado. Listo para analizar.";
+      } catch(err) {
+        console.error("Error cargando modelo:", err);
+        result.innerText = "Error cargando modelo. Verifica rutas y archivos.";
+      }
     }
-  }
+    loadModel();
 
-  async function loop() {
-    webcam.update();
-    await predict();
-    window.requestAnimationFrame(loop);
-  }
+    cameraInput.addEventListener("change", async (event) => {
+      const file = event.target.files[0];
+      if (!file) return;
 
-  async function predict() {
-    const prediction = await model.predict(webcam.canvas);
-    for (let i = 0; i < maxPredictions; i++) {
-      labelContainer.childNodes[i].innerHTML =
-        prediction[i].className + ": " + (prediction[i].probability * 100).toFixed(1) + "%";
+      const reader = new FileReader();
+      reader.onload = function(e) { photo.src = e.target.result; };
+      reader.readAsDataURL(file);
+
+      photo.onload = async () => {
+        if (!model) { alert("Modelo aún no cargado."); return; }
+
+        scanLine.style.display = "block";
+        result.innerText = "Escaneando...";
+
+        const MODEL_SIZE = model.getInputShape()[1];
+        hiddenCanvas.width = MODEL_SIZE;
+        hiddenCanvas.height = MODEL_SIZE;
+        ctx.clearRect(0,0,MODEL_SIZE,MODEL_SIZE);
+        ctx.drawImage(photo,0,0,MODEL_SIZE,MODEL_SIZE);
+
+        try {
+          const prediction = await model.predict(hiddenCanvas);
+          prediction.sort((a,b)=>b.probability-a.probability);
+          const best = prediction[0];
+
+          lastResult = `${best.className} (${(best.probability*100).toFixed(1)}%)`;
+          result.innerHTML = `🔍 Detectado: <span style="color:#fff">${best.className}</span>`;
+          confidenceFill.style.width = (best.probability*100).toFixed(1) + "%";
+
+          const item = document.createElement("div");
+          item.classList.add("history-item");
+          item.innerHTML = `<img src="${photo.src}"><span>${lastResult}</span>`;
+          historyList.prepend(item);
+
+        } catch(err) {
+          console.error("Error prediciendo:", err);
+          result.innerText = "Error al predecir. Intenta otra vez.";
+        } finally {
+          scanLine.style.display = "none";
+          if(navigator.vibrate) navigator.vibrate(300);
+          new Audio("https://actions.google.com/sounds/v1/alarms/beep_short.ogg").play();
+        }
+      };
+    });
+
+    function shareResult() {
+      if(navigator.share && lastResult){
+        navigator.share({ title:"Plastic Scanner Pro", text:"Resultado del análisis: " + lastResult });
+      } else {
+        alert("Compartir no soportado en este dispositivo.");
+      }
     }
-  }
-</script>
+  </script>
 </body>
 </html>
